fix: 修复 手机管家-全局侧边栏-隐藏侧边栏 功能失效的问题